Addressing stationarity for circumstances where a service's response time settles after some invocations, we have added a 'warmup' attribute to the UseCase annotation.